aspnetapp.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Must specofy a HOST of not metrics will be reports for request count
    # See: https://github.com/kubernetes/ingress-nginx/issues/3713
  - host: xxxxxxxxxxx.australiaeast.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: sample
          servicePort: 80
        path: /
